c/examples/writing-a-c-compiler-tests/tests/chapter_18/valid/extra_credit/semantic_analysis/union_members_same_type.c
// Two members of a union can have the same type
union u {
    int a;
    int b;
};

int main(void) {
    union u my_union = {0};
    my_union.a = -1;
    if (my_union.b != -1){
        return 1; // fail
    }
    return 0; // success
}